--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <link rel="stylesheet" href="dist/style.css">
@@ -15,14 +16,13 @@
     <div class="container">
       <div class="jumbotron mt-5">
         <h1 class="text-center text-uppercase">Cinemateca</h1>
-        <h3 class="text-center mt-2">Crie a sua</h3>
+        <h3 class="text-center mt-2">Descubra filmes à vontade <i class="em em-popcorn"></i> </h3>
         <form id="searchForm">
-          <input type="text" class="form-control" id="searchText" placeholder="Buscar filme">
+          <input type="text" class="form-control" id="searchText" placeholder="Buscar filme pelo nome">
         </form>
       </div>
     </div>
   </header>
-
   <main>
     <div class="container">
       <div id="movies" class="row"></div>
